<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/principal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/container"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="-40dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/imageprofile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageView"
        android:id="@+id/nameUser"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:text="@string/nav_header_title"
        android:fontFamily="@font/nunito_regular"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/emailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameUser"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/imageView"
        android:fontFamily="@font/nunito_regular"
        android:layout="@id/name"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/white"
        android:textSize="14dp" />
</RelativeLayout>